<?xml version="1.0"?>
<package>
  <name>ease_ph_pr2_scenes</name>
  <version>1.0.0</version>
  <description>The file server package</description>

  <maintainer email="pomarlan@uni-bremen.de">Mihai Pomarlan</maintainer>


  <license>BSD 2-clause</license>

  <author  email="pomarlan@uni-bremen.de">Mihai Pomarlan</author>

  <buildtool_depend>catkin</buildtool_depend>

  <run_depend>iai_pr2_description</run_depend>
  <run_depend>robot_state_publisher</run_depend>
  <run_depend>tf2_ros</run_depend>
  <run_depend>tf2_web_republisher</run_depend>
  <run_depend>rosbridge_server</run_depend>
  <run_depend>file_server</run_depend>
  <run_depend>giskard_pr2</run_depend>


  <export>
  </export>
</package>
